# SHIFT-CEREBRO

./: .env.example  .env.shift-chat.example  .gitignore  README.md  apply_training_schema.py  apply_v3_migration.py  cerebro_training_schema.sql  docker-compose.shift-chat.yml  main.py  main_monolith_backup.py  migrate_v2.py  old_main.py  passenger_wsgi.py  peaje_nodes_migration.sql  peaje_schema.sql  peaje_schema_v2.sql  peaje_schema_v3_multi_app.sql  pii_scrubber.py  punto_medio.py  punto_medio_approval_migration.sql  pyproject.toml  railway.toml  requirements.txt  simulate_flywheel.py  simulate_flywheel_search.py  tenant_api.py  tenant_constitution.py  tenant_context_schema.sql
adapters/: __init__.py  agents_market_adapter.py  embed_adapter.py  export_adapter.py  graph_adapter.py  openai_adapter.py  openai_proxy.py  studio_adapter.py
agents/: __init__.py  context.py  registry.py  router.py
agents/skills/: andres.yaml  carmen.yaml  catalina.yaml  daniela.yaml  diego.yaml  emilio.yaml  geo-classifier.yaml  insight-router.yaml  isabella.yaml  jorge.yaml  lucia.yaml  mateo.yaml  patricia.yaml  roberto.yaml  santiago.yaml  shiftai.yaml  valentina.yaml
cerebro/: __init__.py  sdk.py
config/: __init__.py  database.py  models.py
feedback/: router.py
generated_documents/: .gitkeep
graph/: __init__.py  architect.py  builder.py  nodes.py  peaje_node.py  router.py  state.py  synthesizer.py  tool_map.py  web_search.py
lightrag_module/: __init__.py  embeddings_adapter.py  llm_adapter.py  router.py  runtime.py
mcp_servers/: __init__.py  creative_server.py  data_server.py  docs_server.py  peaje_server.py  system_server.py
migrations/: run_approval_migration.py  run_nodes_migration.py  run_tenant_migration.py
peaje/: __init__.py  extractor.py  ingest.py  insight_router_client.py  rag_endpoints.py  router.py
punto_medio_pkg/: __init__.py  router.py
static/widget/: cerebro-feedback.js
tests/: test_router.py
tools/: __init__.py  document_tools.py  extended_tools.py
